# discord-comfyui

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  config.yaml.template  docker-compose.yml  pyproject.toml
src/comfyui/: examples.py
src/comfyui_discord_bot/: __init__.py  main.py
src/discord_comfyui/: bot.py  comfyui.py  generation_request.py  main.py  workflow.py  workflow_json.py  workflow_template.py
src/discord_comfyui/commands/: __init__.py  base.py  generate_image.py  gif.py  list_models.py  list_workflows.py  stop.py  system_stats.py
src/discord_comfyui/templates/: blink-workflow.json  chibi-lite.json  chibi.json  default.json  kmfdm.json  robot.json  windblown.json
workflows/: chibi-lite.json  chibi.json  default.json  example_prompt.json  kmfdm.json  midjourney-flux.json  test.json  windblown.json
