[project]
name = "discord-comfyui"
version = "0.1.0"
description = "A Discord bot for interacting with ComfyUI"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]